--- a/app/src/main/res/layout/activity_insert_address.xml
+++ b/app/src/main/res/layout/activity_insert_address.xml
@@ -9,6 +9,7 @@
     <include layout="@layout/include_header" />
 
     <RelativeLayout
+        android:id="@+id/rl_content"
         style="@style/bg_white_style"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
