--- a/app/src/main/res/layout/layout_bcaas_dialog.xml
+++ b/app/src/main/res/layout/layout_bcaas_dialog.xml
@@ -2,7 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="@dimen/d299"
     android:layout_height="match_parent"
-    android:layout_margin="@dimen/d20">
+    android:layout_marginLeft="@dimen/d20"
+    android:layout_marginTop="@dimen/d20"
+    android:layout_marginRight="@dimen/d20">
 
     <TextView
         android:id="@+id/tv_title"
@@ -10,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_margin="@dimen/d16"
+        android:layout_marginTop="@dimen/d16"
         android:gravity="center"
         android:text="@string/warning" />
 
@@ -19,13 +21,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_title"
+        android:layout_marginTop="@dimen/d5"
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="@dimen/d16"
         android:layout_marginRight="@dimen/d16"
-        android:layout_marginTop="@dimen/d4"
         android:gravity="center"
-        android:textColor="@color/grey"
-        android:textSize="@dimen/text_size_12" />
+        android:lineSpacingExtra="@dimen/d3"
+        android:textColor="@color/black_1d2124"
+        android:textSize="@dimen/text_size_14" />
 
     <View
         android:id="@+id/line"
@@ -33,14 +36,12 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/d1"
         android:layout_below="@+id/tv_content"
-        android:layout_marginTop="@dimen/d20" />
+        android:layout_marginTop="@dimen/d16" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/d48"
         android:layout_below="@+id/line"
-        android:layout_marginLeft="@dimen/d16"
-        android:layout_marginRight="@dimen/d16"
         android:gravity="bottom"
         android:orientation="horizontal">
 
@@ -50,9 +51,10 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@color/transparent"
+            android:gravity="center"
             android:text="@string/confirm"
             android:textColor="@color/black50_1d2124"
-            android:textSize="@dimen/text_size_14" />
+            android:textSize="@dimen/text_size_16" />
 
         <View
             style="@style/line_style"
@@ -65,9 +67,10 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@color/transparent"
+            android:gravity="center"
             android:text="@string/cancel"
             android:textColor="@color/black50_1d2124"
-            android:textSize="@dimen/text_size_14" />
+            android:textSize="@dimen/text_size_16" />
     </LinearLayout>
 
 
