--- a/app/src/main/res/layout/layout_bcaas_single_dialog.xml
+++ b/app/src/main/res/layout/layout_bcaas_single_dialog.xml
@@ -2,7 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="@dimen/d299"
     android:layout_height="match_parent"
-    android:layout_margin="@dimen/d20">
+    android:layout_marginLeft="@dimen/d20"
+    android:layout_marginTop="@dimen/d20"
+    android:layout_marginRight="@dimen/d20">
 
     <TextView
         android:id="@+id/tv_title"
@@ -10,22 +12,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_margin="@dimen/d16"
+        android:layout_marginTop="@dimen/d16"
         android:gravity="center"
         android:text="@string/warning" />
 
     <TextView
         android:id="@+id/tv_content"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        style="@style/black_14_text_style"
         android:layout_below="@+id/tv_title"
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="@dimen/d16"
         android:layout_marginRight="@dimen/d16"
-        android:layout_marginTop="@dimen/d4"
-        android:gravity="center"
-        android:textColor="@color/grey"
-        android:textSize="@dimen/text_size_12" />
+        android:layout_marginTop="@dimen/d5"
+        android:gravity="center" />
 
     <View
         android:id="@+id/line"
@@ -33,7 +32,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/d1"
         android:layout_below="@+id/tv_content"
-        android:layout_marginTop="@dimen/d20" />
+        android:layout_marginTop="@dimen/d16" />
 
     <Button
         android:id="@+id/btn_sure"
@@ -43,7 +42,7 @@
         android:background="@color/transparent"
         android:text="@string/confirm"
         android:textColor="@color/black50_1d2124"
-        android:textSize="@dimen/text_size_14" />
+        android:textSize="@dimen/text_size_16" />
 
 
 </RelativeLayout>
