--- a/app/src/main/res/layout/item_address.xml
+++ b/app/src/main/res/layout/item_address.xml
@@ -19,17 +19,18 @@
         android:layout_below="@+id/tv_alias"
         android:layout_marginLeft="@dimen/d12"
         android:layout_marginRight="@dimen/d5"
-        android:lineHeight="@dimen/d22"
-        android:maxHeight="@dimen/d44"
         android:layout_marginTop="@dimen/d16"
         android:layout_toLeftOf="@+id/ib_delete"
+        android:lineHeight="@dimen/d22"
+        android:maxHeight="@dimen/d44"
         android:maxLines="2" />
 
     <ImageButton
-        style="@style/ib_style"
         android:id="@+id/ib_delete"
-        android:layout_alignBottom="@+id/tv_alias"
+        style="@style/ib_style"
         android:layout_alignParentRight="true"
+        android:layout_marginRight="@dimen/d7"
+        android:layout_marginTop="@dimen/d7"
         android:src="@mipmap/icon_delete" />
 
 
