--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -229,6 +229,7 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:minHeight">@dimen/d22</item>
+        <item name="android:lineSpacingExtra">@dimen/d3</item>
         <item name="android:maxLines">2</item>
         <item name="android:cursorVisible">true</item>
         <item name="android:textCursorDrawable">@drawable/edit_text_cursor_drawable</item>
