--- a/app/src/main/res/layout/activity_insert_address.xml
+++ b/app/src/main/res/layout/activity_insert_address.xml
@@ -26,8 +26,8 @@
             style="@style/black30_14_edit_text_style"
             android:layout_below="@+id/tv_account_address_key"
             android:focusable="true"
-            android:maxLength="10"
-            android:hint="@string/please_enter_address_name" />
+            android:hint="@string/please_enter_address_name"
+            android:maxLength="10" />
 
         <View
             style="@style/line_style"
@@ -41,20 +41,26 @@
             android:layout_marginTop="@dimen/d36"
             android:text="@string/account_address" />
 
-        <EditText
-            android:id="@+id/et_address"
-            style="@style/black30_14_edit_text_style"
-            android:layout_below="@+id/tv_address_key"
-            android:layout_marginBottom="@dimen/d20"
-            android:hint="@string/please_enter_receive_account" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_address_key">
 
-        <ImageButton
-            android:id="@+id/ib_scan"
-            style="@style/ib_style"
-            android:layout_alignBottom="@+id/tv_address_key"
-            android:layout_alignParentRight="true"
-            android:layout_marginTop="@dimen/d20"
-            android:src="@mipmap/icon_scan_code" />
+            <EditText
+                android:id="@+id/et_address"
+                style="@style/black30_14_edit_text_style"
+                android:layout_marginBottom="@dimen/d20"
+                android:layout_toLeftOf="@+id/ib_scan"
+                android:hint="@string/please_enter_receive_account" />
+
+            <ImageButton
+                android:id="@+id/ib_scan"
+                style="@style/ib_style"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:src="@mipmap/icon_scan_code" />
+        </RelativeLayout>
+
     </RelativeLayout>
 
     <Button
