--- a/app/src/main/res/layout/activity_wallet_created_success.xml
+++ b/app/src/main/res/layout/activity_wallet_created_success.xml
@@ -22,7 +22,7 @@
             android:id="@+id/tv_account_address"
             style="@style/black70_14_text_style"
             android:layout_marginTop="@dimen/d16"
-            android:lineHeight="@dimen/d22"
+            android:lineSpacingExtra="@dimen/d3"
             android:maxHeight="@dimen/d44"
             android:maxLines="2" />
 
