--- a/app/src/main/res/layout/fragment_send.xml
+++ b/app/src/main/res/layout/fragment_send.xml
@@ -196,7 +196,7 @@
                     android:layout_below="@+id/tv_account_address_key"
                     android:layout_toLeftOf="@+id/ib_scan_address"
                     android:hint="@string/please_enter_address"
-                    android:lineHeight="@dimen/d22"
+                    android:lineSpacingExtra="@dimen/d3"
                     android:maxHeight="@dimen/d44"
                     android:maxLines="2" />
 
