--- a/app/src/main/res/layout/item_address.xml
+++ b/app/src/main/res/layout/item_address.xml
@@ -3,13 +3,11 @@
     android:id="@+id/rl_setting_types"
     style="@style/bg_white_style"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/d106"
-    android:layout_margin="@dimen/d8">
+    android:layout_height="@dimen/d106">
 
     <TextView
         android:id="@+id/tv_alias"
         style="@style/black_16_text_style"
-        android:layout_marginLeft="@dimen/d12"
         android:layout_marginTop="@dimen/d20" />
 
     <TextView
@@ -17,11 +15,10 @@
         style="@style/black_14_text_style"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/tv_alias"
-        android:layout_marginLeft="@dimen/d12"
         android:layout_marginRight="@dimen/d5"
         android:layout_marginTop="@dimen/d16"
         android:layout_toLeftOf="@+id/ib_delete"
-        android:lineHeight="@dimen/d22"
+        android:lineSpacingExtra="@dimen/d3"
         android:maxHeight="@dimen/d44"
         android:maxLines="2" />
 
@@ -29,8 +26,7 @@
         android:id="@+id/ib_delete"
         style="@style/ib_style"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="@dimen/d7"
-        android:layout_marginTop="@dimen/d7"
+        android:layout_marginTop="@dimen/d12"
         android:src="@mipmap/icon_delete" />
 
 
