交易数额暂时设定长度为10

--- a/app/src/main/res/layout/fragment_send.xml
+++ b/app/src/main/res/layout/fragment_send.xml
@@ -229,6 +229,7 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tv_transaction_amount_key"
                     android:layout_marginBottom="@dimen/d20"
+                    android:maxLength="10"
                     android:layout_marginTop="@dimen/d16"
                     android:hint="@string/please_enter_transaction_amount"
                     android:inputType="number"
