--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -16,6 +16,7 @@
 
     <Button
         android:id="@+id/btnLogout"
+        style="?android:attr/borderlessButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="@dimen/d50"
         android:layout_marginTop="@dimen/d30"
