--- a/app/src/main/res/layout/activity_check_wallet_info.xml
+++ b/app/src/main/res/layout/activity_check_wallet_info.xml
@@ -24,22 +24,27 @@
                 android:layout_marginTop="@dimen/d20"
                 android:text="@string/my_account_address" />
 
-            <Button
-                android:id="@+id/btn_copy"
-                android:layout_width="@dimen/d18"
-                android:layout_height="@dimen/d18"
+            <ImageView
+                android:id="@+id/iv_copy"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_alignBottom="@+id/tv_address_key"
                 android:layout_alignParentRight="true"
-                android:layout_marginLeft="@dimen/d10"
-                android:background="@mipmap/icon_copy"
-                android:padding="@dimen/d4" />
+                android:layout_alignTop="@+id/tv_address_key"
+                android:background="@color/transparent"
+                android:maxHeight="@dimen/d48"
+                android:maxWidth="@dimen/d32"
+                android:paddingLeft="@dimen/d12"
+                android:paddingRight="@dimen/d5"
+                android:paddingTop="@dimen/d2"
+                android:src="@mipmap/icon_copy" />
 
             <TextView
                 android:id="@+id/tv_account_address_value"
                 style="@style/black70_14_single_text_style"
                 android:layout_marginLeft="@dimen/d18"
                 android:layout_marginTop="@dimen/d20"
-                android:layout_toLeftOf="@+id/btn_copy"
+                android:layout_toLeftOf="@+id/iv_copy"
                 android:layout_toRightOf="@+id/tv_address_key"
                 android:gravity="center_vertical|right"
                 android:textColor="@color/black70_1d2124" />
