--- a/app/src/main/res/layout/item_pop_address_list.xml
+++ b/app/src/main/res/layout/item_pop_address_list.xml
@@ -17,23 +17,24 @@
             android:id="@+id/tv_address_name"
             style="@style/black_16_text_style"
             android:layout_width="@dimen/d0"
-            android:gravity="center"
-            android:layout_gravity="center"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_marginLeft="@dimen/d10"
             android:layout_weight="1"
-            android:ellipsize="middle" />
+            android:ellipsize="middle"
+            android:gravity="center" />
 
         <TextView
             android:id="@+id/tv_address"
             style="@style/black70_14_single_text_style"
             android:layout_width="@dimen/d0"
-            android:gravity="center"
-            android:layout_gravity="center"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="@dimen/d10"
             android:layout_marginRight="@dimen/d10"
-            android:layout_weight="3"
-            android:ellipsize="middle" />
+            android:layout_weight="2"
+            android:ellipsize="middle"
+            android:gravity="center" />
 
 
     </LinearLayout>
