--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -30,8 +30,8 @@
     <View
         style="@style/line_style"
         android:layout_marginLeft="@dimen/d12"
-        android:layout_marginTop="@dimen/d16"
-        android:layout_marginRight="@dimen/d12" />
+        android:layout_marginRight="@dimen/d12"
+        android:layout_marginTop="@dimen/d16" />
 
     <Button
         android:id="@+id/btn_unlock_wallet"
@@ -64,5 +64,12 @@
             android:drawablePadding="@dimen/d12"
             android:gravity="center_vertical"
             android:text="@string/import_wallet" />
+
+        <TextView
+            android:id="@+id/tv_version"
+            style="@style/black30_10_text_style"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="@dimen/d30" />
     </RelativeLayout>
 </LinearLayout>
