--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -201,6 +201,14 @@
         <item name="android:textSize">@dimen/text_size_14</item>
     </style>
 
+    <style name="black30_10_text_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@color/transparent</item>
+        <item name="android:textColor">@color/black30_1d2124</item>
+        <item name="android:textSize">@dimen/text_size_10</item>
+    </style>
+
     <style name="black_14_single_edit_text_style" parent="marquee_style">
         <item name="android:layout_height">@dimen/d32</item>
         <item name="android:cursorVisible">true</item>
