--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -64,12 +64,16 @@
             android:drawablePadding="@dimen/d12"
             android:gravity="center_vertical"
             android:text="@string/import_wallet" />
-
         <TextView
             android:id="@+id/tv_version"
             style="@style/black30_10_text_style"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="@dimen/d30" />
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="@dimen/d30"
+            android:gravity="center_horizontal" />
+
     </RelativeLayout>
+
+
 </LinearLayout>
