--- a/app/src/main/res/layout/activity_check_wallet_info.xml
+++ b/app/src/main/res/layout/activity_check_wallet_info.xml
@@ -68,6 +68,7 @@
                 android:layout_toLeftOf="@+id/ll_currency"
                 android:layout_toRightOf="@+id/tv_balance_key"
                 android:gravity="center|right"
+                android:fontFamily="sans-serif-condensed"
                 android:textColor="@color/orange_yellow"
                 tools:text="0" />
 
