--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -58,7 +58,9 @@
             android:layout_width="wrap_content"
             android:layout_below="@+id/tv_balance_key"
             android:layout_marginTop="@dimen/d8"
-            android:gravity="center|left" />
+            android:fontFamily="sans-serif-condensed"
+            android:gravity="center|left"
+            android:text="124235432523" />
 
         <ProgressBar
             android:id="@+id/pb_balance"
