--- a/app/src/main/res/layout/fragment_send.xml
+++ b/app/src/main/res/layout/fragment_send.xml
@@ -90,6 +90,7 @@
                                     android:layout_width="wrap_content"
                                     android:gravity="left"
                                     android:textSize="@dimen/text_size_12"
+                                    android:fontFamily="sans-serif-condensed"
                                     tools:text="0.000000" />
 
                                 <ProgressBar
