--- a/app/src/main/res/layout/layout_bcaas_dialog.xml
+++ b/app/src/main/res/layout/layout_bcaas_dialog.xml
@@ -53,6 +53,7 @@
             android:background="@color/transparent"
             android:gravity="center"
             android:text="@string/confirm"
+            android:textAllCaps="false"
             android:textColor="@color/black50_1d2124"
             android:textSize="@dimen/text_size_16" />
 
@@ -68,6 +69,7 @@
             android:layout_weight="1"
             android:background="@color/transparent"
             android:gravity="center"
+            android:textAllCaps="false"
             android:text="@string/cancel"
             android:textColor="@color/black50_1d2124"
             android:textSize="@dimen/text_size_16" />
