--- a/app/src/main/res/layout/layout_bcaas_single_dialog.xml
+++ b/app/src/main/res/layout/layout_bcaas_single_dialog.xml
@@ -41,6 +41,7 @@
         android:layout_below="@+id/line"
         android:background="@color/transparent"
         android:text="@string/confirm"
+        android:textAllCaps="false"
         android:textColor="@color/black50_1d2124"
         android:textSize="@dimen/text_size_16" />
 
