--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -1,32 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/d34"
-    android:layout_margin="@dimen/d8"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="@dimen/d16"
     android:gravity="center_vertical"
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/tvAccountAddress"
-        style="@style/black70_14_single_text_style"
-        android:ellipsize="middle"
-        android:layout_width="@dimen/d0"
-        android:layout_marginRight="@dimen/d5"
-        android:layout_weight="2" />
-
-    <TextView
-        android:id="@+id/tv_balance"
+        android:id="@+id/tv_amount"
         style="@style/black70_14_single_text_style"
         android:layout_width="@dimen/d0"
-        android:layout_marginLeft="@dimen/d5"
-        android:layout_marginRight="@dimen/d5"
         android:layout_weight="1"
-        android:gravity="right|center_vertical" />
+        android:gravity="left|center_vertical"
+        android:text="smnadf masdfadgfadsgnf" />
 
     <TextView
-        android:id="@+id/tvCurrency"
+        android:id="@+id/tv_block_service"
         style="@style/black70_14_single_text_style"
-        android:layout_marginLeft="@dimen/d5"
-        android:layout_marginRight="@dimen/d5" />
+        android:layout_marginRight="@dimen/d21"
+        android:gravity="center_vertical|right"
+        android:minWidth="@dimen/d40"
+        android:text="BCC" />
+
+    <TextView
+        android:id="@+id/tv_account_address"
+        style="@style/black70_14_single_text_style"
+        android:layout_width="@dimen/d0"
+        android:layout_weight="1"
+        android:ellipsize="middle"
+        android:gravity="left|center_vertical"
+        android:text="asdjfna.jnfkajsdf" />
+
 
 </LinearLayout>
