切換幣種需要重新請求交易紀錄，否則當前頁面的信息要進行疊加

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -136,7 +136,7 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_account_transaction_record"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:scrollbars="none"
                 tools:listitem="@layout/item_transaction" />
         </android.support.v4.widget.SwipeRefreshLayout>
