--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -11,15 +11,15 @@
         style="@style/black70_14_single_text_style"
         android:layout_width="@dimen/d0"
         android:layout_weight="1"
-        android:gravity="left|center_vertical"
-        android:text="smnadf masdfadgfadsgnf" />
+        android:gravity="left|center_vertical" />
 
     <TextView
         android:id="@+id/tv_block_service"
         style="@style/black70_14_single_text_style"
-        android:layout_marginRight="@dimen/d21"
+        android:layout_marginLeft="@dimen/d5"
+        android:layout_marginRight="@dimen/d5"
         android:gravity="center_vertical|right"
-        android:minWidth="@dimen/d40"
+        android:maxWidth="@dimen/d40"
         android:text="BCC" />
 
     <TextView
@@ -28,8 +28,7 @@
         android:layout_width="@dimen/d0"
         android:layout_weight="1"
         android:ellipsize="middle"
-        android:gravity="left|center_vertical"
-        android:text="asdjfna.jnfkajsdf" />
+        android:gravity="right|center_vertical" />
 
 
 </LinearLayout>
