--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -6,8 +6,8 @@
     android:gravity="center_vertical"
     android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/tv_amount"
+    <io.bcaas.view.BcaasBalanceTextView
+        android:id="@+id/bbt_amount"
         style="@style/black70_14_single_text_style"
         android:layout_width="@dimen/d0"
         android:layout_weight="1"
