--- a/app/src/main/res/layout-land/tv_activity_main.xml
+++ b/app/src/main/res/layout-land/tv_activity_main.xml
@@ -1,48 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/tools"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/black80_1d2124">
+    style="@style/tv_layout_bg">
 
     <TextView
         android:id="@+id/tv_current_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/d20"
         android:textColor="@color/white"
         android:textSize="@dimen/text_size_28" />
 
     <Button
-        android:id="@+id/btn_unlock_wallet"
+        android:id="@+id/btn_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="@dimen/d12"
-        android:layout_marginTop="@dimen/d12"
         android:background="@drawable/tv_button_selector"
-        android:text="@string/unlock" />
-
-    <Button
-        android:id="@+id/btn_create_wallet"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/btn_unlock_wallet"
-        android:layout_marginRight="@dimen/d12"
-        android:background="@drawable/tv_button_selector"
-        android:text="@string/create_wallet" />
-
-    <Button
-        android:id="@+id/btn_import_wallet"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/btn_create_wallet"
-        android:layout_marginRight="@dimen/d12"
-        android:background="@drawable/tv_button_selector"
-        android:nextFocusDown="@+id/cv_home"
-        android:text="@string/import_wallet" />
+        android:nextFocusDown="@+id/cv_send"
+        android:nextFocusLeft="@+id/cv_home"
+        android:nextFocusRight="@+id/cv_setting"
+        android:text="@string/login" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -79,7 +57,15 @@
                 android:layout_width="@dimen/d100"
                 android:layout_height="@dimen/d100"
                 android:layout_gravity="center"
-                card_view:cardBackgroundColor="@color/button_left_color"
+                android:backgroundTintMode="src_over"
+                android:clickable="true"
+                android:elevation="@dimen/d12"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:translationZ="@dimen/d12"
+                app:cardCornerRadius="@dimen/d12"
+                app:cardElevation="@dimen/d12"
+                card_view:cardBackgroundColor="@drawable/tv_card_view_selector"
                 card_view:cardCornerRadius="@dimen/d4">
 
                 <TextView
@@ -101,7 +87,14 @@
                 android:layout_width="@dimen/d100"
                 android:layout_height="@dimen/d100"
                 android:layout_gravity="center"
-                card_view:cardBackgroundColor="@color/button_right_color"
+                android:clickable="true"
+                android:elevation="@dimen/d12"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:translationZ="@dimen/d12"
+                app:cardCornerRadius="@dimen/d12"
+                app:cardElevation="@dimen/d12"
+                card_view:cardBackgroundColor="@drawable/tv_card_view_selector"
                 card_view:cardCornerRadius="@dimen/d4">
 
                 <TextView
@@ -123,7 +116,14 @@
                 android:layout_width="@dimen/d100"
                 android:layout_height="@dimen/d100"
                 android:layout_gravity="center"
-                card_view:cardBackgroundColor="@color/light_green2"
+                android:clickable="true"
+                android:elevation="@dimen/d12"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:translationZ="@dimen/d12"
+                app:cardCornerRadius="@dimen/d12"
+                app:cardElevation="@dimen/d12"
+                card_view:cardBackgroundColor="@drawable/tv_card_view_selector"
                 card_view:cardCornerRadius="@dimen/d4">
 
                 <TextView
