--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,6 @@
 
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar" />
 
-
     <!-- android去掉layout顶部的阴影（状态栏下边的阴影） -->
     <style name="Theme.bcaas" parent="AppTheme">
         <item name="android:showDividers">none</item>
@@ -15,127 +14,6 @@
         <item name="colorAccent">@color/transparent</item>
         <item name="android:textColorPrimary">@color/white</item>
         <item name="android:textColorSecondary">@color/white</item>
-
-        <!--TV start-->
-
-        <!--<item name="baseCardViewStyle">@style/Widget.Leanback.BaseCardViewStyle</item>-->
-        <!--<item name="imageCardViewStyle">@style/Widget.Leanback.ImageCardViewStyle</item>-->
-        <!--<item name="imageCardViewImageStyle">@style/Widget.Leanback.ImageCardView.ImageStyle</item>-->
-        <!--<item name="imageCardViewTitleStyle">@style/Widget.Leanback.ImageCardView.TitleStyle</item>-->
-        <!--<item name="imageCardViewContentStyle">@style/Widget.Leanback.ImageCardView.ContentStyle-->
-        <!--</item>-->
-        <!--<item name="imageCardViewBadgeStyle">@style/Widget.Leanback.ImageCardView.BadgeStyle</item>-->
-        <!--<item name="imageCardViewInfoAreaStyle">@style/Widget.Leanback.ImageCardView.InfoAreaStyle-->
-        <!--</item>-->
-
-        <!--<item name="browsePaddingStart">@dimen/lb_browse_padding_start</item>-->
-        <!--<item name="browsePaddingEnd">@dimen/lb_browse_padding_end</item>-->
-        <!--<item name="browsePaddingTop">@dimen/lb_browse_padding_top</item>-->
-        <!--<item name="browsePaddingBottom">@dimen/lb_browse_padding_bottom</item>-->
-        <!--<item name="browseRowsMarginStart">@dimen/lb_browse_rows_margin_start</item>-->
-        <!--<item name="browseRowsMarginTop">@dimen/lb_browse_rows_margin_top</item>-->
-        <!--<item name="browseRowsFadingEdgeLength">@dimen/lb_browse_rows_fading_edge</item>-->
-
-        <!--<item name="headersVerticalGridStyle">@style/Widget.Leanback.Headers.VerticalGridView</item>-->
-        <!--<item name="headerStyle">@style/Widget.Leanback.Header</item>-->
-        <!--<item name="sectionHeaderStyle">@style/Widget.Leanback.Header.Section</item>-->
-
-        <!--<item name="rowsVerticalGridStyle">@style/Widget.Leanback.Rows.VerticalGridView</item>-->
-        <!--<item name="rowHorizontalGridStyle">@style/Widget.Leanback.Row.HorizontalGridView</item>-->
-        <!--<item name="itemsVerticalGridStyle">@style/Widget.Leanback.GridItems.VerticalGridView</item>-->
-
-        <!--<item name="browseTitleViewLayout">@layout/lb_browse_title</item>-->
-        <!--<item name="browseTitleTextStyle">@style/Widget.Leanback.Title.Text</item>-->
-        <!--<item name="browseTitleIconStyle">@style/Widget.Leanback.Title.Icon</item>-->
-        <!--<item name="browseTitleViewStyle">@style/Widget.Leanback.TitleView</item>-->
-
-        <!--<item name="rowHeaderStyle">@style/Widget.Leanback.Row.Header</item>-->
-        <!--<item name="rowHeaderDescriptionStyle">@style/Widget.Leanback.Row.Header.Description</item>-->
-        <!--<item name="rowHoverCardTitleStyle">@style/Widget.Leanback.Row.HoverCardTitle</item>-->
-        <!--<item name="rowHoverCardDescriptionStyle">@style/Widget.Leanback.Row.HoverCardDescription-->
-        <!--</item>-->
-        <!--<item name="rowHeaderDockStyle">@style/Widget.Leanback.Row.HeaderDock</item>-->
-
-        <!--<item name="searchOrbViewStyle">@style/Widget.Leanback.SearchOrbViewStyle</item>-->
-
-
-        <!--<item name="detailsDescriptionTitleStyle">-->
-            <!--@style/Widget.Leanback.DetailsDescriptionTitleStyle-->
-        <!--</item>-->
-        <!--<item name="detailsDescriptionSubtitleStyle">-->
-            <!--@style/Widget.Leanback.DetailsDescriptionSubtitleStyle-->
-        <!--</item>-->
-        <!--<item name="detailsDescriptionBodyStyle">-->
-            <!--@style/Widget.Leanback.DetailsDescriptionBodyStyle-->
-        <!--</item>-->
-        <!--<item name="detailsActionButtonStyle">@style/Widget.Leanback.DetailsActionButtonStyle</item>-->
-        <!--&lt;!&ndash; Attributes used for styling of a playback &ndash;&gt;-->
-        <!--<item name="playbackPaddingStart">@dimen/lb_playback_controls_margin_start</item>-->
-        <!--<item name="playbackPaddingEnd">@dimen/lb_playback_controls_margin_end</item>-->
-        <!--<item name="playbackMediaItemPaddingStart">@dimen/lb_playback_media_row_horizontal_padding-->
-        <!--</item>-->
-
-        <!--<item name="playbackMediaListHeaderStyle">-->
-            <!--@style/Widget.Leanback.PlaybackMediaListHeaderStyle-->
-        <!--</item>-->
-        <!--<item name="playbackMediaItemRowStyle">@style/Widget.Leanback.PlaybackMediaItemRowStyle-->
-        <!--</item>-->
-        <!--<item name="playbackMediaItemSeparatorStyle">-->
-            <!--@style/Widget.Leanback.PlaybackMediaItemSeparatorStyle-->
-        <!--</item>-->
-        <!--<item name="playbackMediaListHeaderTitleStyle">-->
-            <!--@style/Widget.Leanback.PlaybackMediaListHeaderTitleStyle-->
-        <!--</item>-->
-        <!--<item name="playbackMediaItemDetailsStyle">-->
-            <!--@style/Widget.Leanback.PlaybackMediaItemDetailsStyle-->
-        <!--</item>-->
-        <!--<item name="playbackMediaItemNumberViewFlipperStyle">-->
-            <!--@style/Widget.Leanback.PlaybackMediaItemNumberViewFlipperStyle-->
-        <!--</item>-->
-        <!--<item name="playbackMediaItemNumberViewFlipperLayout">-->
-            <!--@layout/lb_media_item_number_view_flipper-->
-        <!--</item>-->
-        <!--<item name="playbackMediaItemNumberStyle">-->
-            <!--@style/Widget.Leanback.PlaybackMediaItemNumberStyle-->
-        <!--</item>-->
-        <!--<item name="playbackMediaItemNameStyle">@style/Widget.Leanback.PlaybackMediaItemNameStyle-->
-        <!--</item>-->
-        <!--<item name="playbackMediaItemDurationStyle">-->
-            <!--@style/Widget.Leanback.PlaybackMediaItemDurationStyle-->
-        <!--</item>-->
-
-        <!--<item name="playbackControlsButtonStyle">-->
-            <!--@style/Widget.Leanback.PlaybackControlsButtonStyle-->
-        <!--</item>-->
-        <!--<item name="playbackControlButtonLabelStyle">-->
-            <!--@style/Widget.Leanback.PlaybackControlLabelStyle-->
-        <!--</item>-->
-        <!--<item name="playbackControlsTimeStyle">@style/Widget.Leanback.PlaybackControlsTimeStyle-->
-        <!--</item>-->
-        <!--<item name="playbackControlsActionIcons">-->
-            <!--@style/Widget.Leanback.PlaybackControlsActionIconsStyle-->
-        <!--</item>-->
-        <!--<item name="playbackControlsAutoHideTimeout">@integer/lb_playback_controls_show_time_ms-->
-        <!--</item>-->
-        <!--<item name="playbackControlsAutoHideTickleTimeout">-->
-            <!--@integer/lb_playback_controls_tickle_timeout_ms-->
-        <!--</item>-->
-
-        <!--<item name="errorMessageStyle">@style/Widget.Leanback.ErrorMessageStyle</item>-->
-
-        <!--<item name="defaultSearchColor">@color/lb_default_search_color</item>-->
-        <!--<item name="defaultSearchIconColor">@color/lb_default_search_icon_color</item>-->
-        <!--<item name="defaultSearchBrightColor">?attr/defaultSearchColor</item>-->
-        <!--<item name="defaultSearchIcon">@drawable/lb_ic_in_app_search</item>-->
-
-        <!--<item name="defaultSectionHeaderColor">?attr/defaultSearchColor</item>-->
-
-        <!--<item name="overlayDimMaskColor">@color/lb_view_dim_mask_color</item>-->
-        <!--<item name="overlayDimActiveLevel">@fraction/lb_view_active_level</item>-->
-        <!--<item name="overlayDimDimmedLevel">@fraction/lb_view_dimmed_level</item>-->
-
-        <!--TV end-->
-
     </style>
 
     <style name="dialog_loading" parent="Theme.AppCompat.Dialog">
@@ -413,6 +291,8 @@
     </style>
 
     <!--TV start-->
+    <style name="TVAppTheme" parent="@style/Theme.Leanback" />
+
     <style name="tab_tv_menu_item">
         <item name="android:layout_width">@dimen/d100</item>
         <item name="android:layout_weight">1</item>
@@ -423,6 +303,23 @@
         <item name="android:padding">@dimen/d1</item>
         <item name="android:textColor">@drawable/selector_radio_button_text</item>
         <item name="android:textSize">@dimen/text_size_12</item>
+    </style>
+
+
+    <style name="tv_layout_bg">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:background">@color/black80_1d2124</item>
+        <item name="android:paddingTop">@dimen/d60</item>
+        <item name="android:paddingBottom">@dimen/d60</item>
+        <item name="android:paddingLeft">@dimen/d90</item>
+        <item name="android:paddingRight">@dimen/d90</item>
+    </style>
+    <style name="white_28_text_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/text_size_28</item>
     </style>
     <!--TV end-->
 
