--- a/app/src/main/res/layout-land/tv_activity_send.xml
+++ b/app/src/main/res/layout-land/tv_activity_send.xml
@@ -2,6 +2,111 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/tv_layout_bg"
     android:orientation="vertical">
+
     <include layout="@layout/tv_include_header" />
+
+    <LinearLayout
+        style="@style/tv_layout_style"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/d24"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="@dimen/d0"
+            android:layout_height="match_parent"
+            android:layout_gravity="center|right"
+            android:layout_marginTop="@dimen/d24"
+            android:layout_weight="1"
+            android:background="@color/grey"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/my_account"
+                android:textColor="@color/red_da261f" />
+
+            <include layout="@layout/tv_include_mycount_info" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="@dimen/d0"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/d20"
+            android:layout_marginTop="@dimen/d24"
+            android:layout_weight="1"
+            android:background="@color/grey"
+            android:gravity="center_horizontal|left"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/receive_account"
+                android:textColor="@color/red_da261f" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/receive_account"
+                android:textColor="@color/red_da261f" />
+
+            <EditText
+                android:id="@+id/et_input_destination_address"
+                style="@style/black_14_edit_text_style"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginBottom="@dimen/d16"
+                android:layout_marginTop="@dimen/d16"
+                android:layout_toLeftOf="@+id/ib_scan_address"
+                android:background="@color/transparent"
+                android:cursorVisible="true"
+                android:hint="@string/please_enter_address"
+                android:inputType="textMultiLine"
+                android:lineSpacingExtra="@dimen/d3"
+                android:maxLines="2"
+                android:textColorHint="@color/black30_1d2124"
+                android:textCursorDrawable="@drawable/edit_text_cursor_drawable" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/transaction_amount"
+                android:textColor="@color/red_da261f" />
+
+            <EditText
+                android:id="@+id/et_transaction_amount"
+                style="@style/black_14_single_edit_text_style"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_transaction_amount_key"
+                android:layout_centerVertical="true"
+                android:layout_marginBottom="@dimen/d16"
+                android:layout_marginTop="@dimen/d16"
+                android:layout_toLeftOf="@+id/ib_scan_address"
+                android:background="@color/transparent"
+                android:cursorVisible="true"
+                android:hint="@string/please_enter_transaction_amount"
+                android:inputType="number"
+                android:maxLength="10"
+                android:singleLine="true"
+                android:textColor="@color/orange_yellow"
+                android:textSize="@dimen/text_size_18" />
+
+            <Button
+                android:id="@+id/btn_send"
+                style="@style/button_style"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/d10"
+                android:text="@string/send"
+                android:textColor="@color/red_da261f" />
+
+        </LinearLayout>
+    </LinearLayout>
 
 </LinearLayout>
