修正文案顯示和界面

--- a/app/src/main/res/layout/activity_check_wallet_info.xml
+++ b/app/src/main/res/layout/activity_check_wallet_info.xml
@@ -103,7 +103,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom"
                     android:drawablePadding="@dimen/d5"
-                    android:drawableRight="@mipmap/icon_dropdown"
+                    android:drawableRight="@mipmap/icon_select_red"
                     android:gravity="bottom"
                     android:textSize="@dimen/text_size_12" />
 
