--- a/app/src/main/res/layout-land/tv_activity_home.xml
+++ b/app/src/main/res/layout-land/tv_activity_home.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/d16"
+        android:layout_marginTop="@dimen/d24"
         android:orientation="horizontal">
 
         <LinearLayout
@@ -27,17 +27,14 @@
                 android:gravity="center"
                 android:orientation="vertical">
 
-                <include layout="@layout/tv_include_mycount_info" />
+                <include layout="@layout/tv_include_account_info" />
 
             </LinearLayout>
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                style="@style/white_24_text_style"
                 android:layout_marginTop="@dimen/d16"
-                android:text="@string/my_account"
-                android:textColor="@color/white"
-                android:textSize="@dimen/text_size_26" />
+                android:text="@string/my_account" />
         </LinearLayout>
 
         <LinearLayout
@@ -54,16 +51,33 @@
                 android:layout_height="@dimen/d0"
                 android:layout_weight="1">
 
+                <ImageView
+                    android:id="@+id/iv_no_record"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:layout_marginTop="@dimen/d20"
+                    android:src="@mipmap/img_no_data"
+                    android:visibility="invisible" />
+
+                <TextView
+                    android:id="@+id/tv_no_transaction_record"
+                    style="@style/black30_14_text_style"
+                    android:layout_below="@+id/iv_no_record"
+                    android:layout_centerHorizontal="true"
+                    android:text="@string/no_transaction_records"
+                    android:visibility="invisible" />
+
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/rv_account_transaction_record"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_above="@+id/btn_loading_more"
+                    android:layout_above="@+id/tv_loading_more"
                     android:scrollbars="none"
                     tools:listitem="@layout/item_transaction" />
 
-                <Button
-                    android:id="@+id/btn_loading_more"
+                <TextView
+                    android:id="@+id/tv_loading_more"
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/d30"
                     android:layout_alignParentBottom="true"
@@ -81,12 +95,9 @@
             </RelativeLayout>
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                style="@style/white_24_text_style"
                 android:layout_marginTop="@dimen/d16"
-                android:text="@string/transaction_records"
-                android:textColor="@color/white"
-                android:textSize="@dimen/text_size_26" />
+                android:text="@string/transaction_records" />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
