--- a/app/src/main/res/layout-land/tv_include_account_info.xml
+++ b/app/src/main/res/layout-land/tv_include_account_info.xml
@@ -4,6 +4,7 @@
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:layout_marginTop="@dimen/d16"
+    android:background="@color/grey"
     android:gravity="center">
 
     <TextView
@@ -24,17 +25,20 @@
         android:text="@string/currency"
         android:textColor="@color/white" />
 
-    <Button
+    <TextView
         android:id="@+id/tv_currency"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/d30"
         android:layout_alignBottom="@+id/tv_currency_key"
         android:layout_gravity="center"
         android:layout_marginLeft="@dimen/d10"
         android:layout_toRightOf="@+id/tv_currency_key"
         android:background="@drawable/tv_button_selector"
+        android:clickable="true"
         android:drawablePadding="@dimen/d5"
         android:drawableRight="@mipmap/icon_select_white"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:gravity="center"
         android:textColor="@color/white" />
 
@@ -56,8 +60,7 @@
         android:layout_marginLeft="@dimen/d10"
         android:layout_marginTop="@dimen/d5"
         android:layout_toRightOf="@+id/tv_balance_key"
-        android:textColor="@color/orange_yellow"
-        tools:text="1000000" />
+        android:textColor="@color/orange_yellow" />
 
     <ProgressBar
         android:id="@+id/pb_balance"
@@ -87,17 +90,15 @@
         android:layout_below="@+id/tv_balance_key"
         android:layout_gravity="center"
         android:layout_marginLeft="@dimen/d10"
-        android:layout_marginTop="@dimen/d5"
         android:layout_toRightOf="@+id/tv_account_address_key" />
 
     <TextView
         android:id="@+id/tv_my_address"
-        android:layout_width="@dimen/d200"
+        android:layout_width="@dimen/d150"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/iv_qr_code"
         android:layout_below="@+id/iv_qr_code"
         android:layout_gravity="center"
-        android:layout_marginTop="@dimen/d5"
         android:gravity="center"
         android:textColor="@color/white" />
 </RelativeLayout>
