--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -310,10 +310,10 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:background">@color/black80_1d2124</item>
-        <item name="android:paddingTop">@dimen/d60</item>
-        <item name="android:paddingBottom">@dimen/d60</item>
-        <item name="android:paddingLeft">@dimen/d90</item>
-        <item name="android:paddingRight">@dimen/d90</item>
+        <item name="android:paddingTop">@dimen/d30</item>
+        <item name="android:paddingBottom">@dimen/d30</item>
+        <item name="android:paddingLeft">@dimen/d60</item>
+        <item name="android:paddingRight">@dimen/d60</item>
     </style>
 
     <style name="white_28_text_style">
@@ -321,6 +321,27 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">@dimen/text_size_28</item>
+    </style>
+
+    <style name="white_26_text_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/text_size_26</item>
+    </style>
+
+    <style name="white_24_text_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/text_size_24</item>
+    </style>
+
+    <style name="white_20_text_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/text_size_20</item>
     </style>
 
     <style name="tv_layout_style">
